v0.4.0:
  date: 2012-11-13
  changes:
    - Conversion to grunt v0.4 conventions.
v0.3.2:
  date: 2012-10-12
  changes:
    - Rename grunt-contrib-lib dep to grunt-lib-contrib.
v0.3.1:
  date: 2012-10-09
  changes:
    - Replace zipstream package with archiver.
v0.3.0:
  date: 2012-09-24
  changes:
    - General cleanup.
    - Options no longer accepted from global config key.
v0.2.2:
 date: 2012-09-18
 changes:
   - Test refactoring.
   - No valid source check.
   - Automatic mode detection.
v0.2.0:
  date: 2012-09-10
  changes:
    - Refactored from grunt-contrib into individual repo.