@@ -28,17 +28,30 @@ Node Libraries Used:
 
 ### Options
 
+#### cwd
+Type: `String`
+
+This option sets the current working directory for use with the minimatch and compress process. This helps translate paths when compressed so that the destination stucture matches the source structure exactly. Without a `cwd` set, all paths are relative to the gruntfile directory which can cause extra depth to be added to your compressed structure when it may not be desired.
+
+```js
+compress: {
+  target: {
+    options: {
+      cwd: 'path/to/sources'
+    },
+    files: {
+      'tmp/test.zip': ['*', 'sub1/*']
+    }
+  }
+}
+```
+
 #### mode
 Type: `String`
 
 This is used to define which mode to use, currently supports `gzip`, `tar`, `tgz` (tar gzip) and `zip`.
 
 Automatically detected per dest:src pair, but can be overridden per target if desired.
-
-#### basePath
-Type: `String`
-
-Adjusts internal filenames to be relative to provided path, within the resulting archive file.  Automatically detected per dest:src pair but can be overridden per target if desired.
 
 #### flatten
 Type: `Boolean`
@@ -53,6 +66,11 @@ Default: 1
 Sets the level of archive compression.
 
 *Currently, gzip compression related options are not supported due to deficiencies in node's zlib library.*
+
+#### minimatch
+Type: `Object`
+
+These options will be forwarded on to grunt.file.expand, as referenced in the [minimatch options section](https://github.com/isaacs/minimatch/#options)
 
 #### rootDir
 Type: `String`
@@ -78,7 +96,7 @@ compress: {
 
 ## Release History
 
- * 2012-11-12   v0.4.0   Conversion to grunt v0.4 conventions.
+ * 2012-11-28   v0.4.0   Conversion to grunt v0.4 conventions. Replace basePath with cwd.
  * 2012-10-11   v0.3.2   Rename grunt-contrib-lib dep to grunt-lib-contrib.
  * 2012-10-08   v0.3.1   Replace zipstream package with archiver.
  * 2012-09-23   v0.3.0   General cleanup. Options no longer accepted from global config key.
@@ -89,4 +107,4 @@ compress: {
 
 Task submitted by [Chris Talkington](http://christalkington.com/)
 
-*This file was generated on Wed Nov 28 2012 08:32:51.*
+*This file was generated on Thu Nov 29 2012 22:13:15.*
