@@ -1,7 +1,8 @@
 v0.4.0:
-  date: 2012-11-13
+  date: 2012-11-29
   changes:
     - Conversion to grunt v0.4 conventions.
+    - Replace basePath with cwd.
 v0.3.2:
   date: 2012-10-12
   changes:
